[gd_scene load_steps=2 format=2]

[ext_resource path="res://SelectBox.gd" type="Script" id=1]

[node name="SelectBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelKey" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Key"

[node name="LabelValue" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0
text = "Value"

[node name="LabelMeta" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 50.0
text = "Meta Info"

[node name="TextMeta" type="TextEdit" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 316.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 3
readonly = true

[node name="LabelTemplate" type="Label" parent="VBoxContainer"]
margin_top = 320.0
margin_right = 1024.0
margin_bottom = 334.0
text = "Meta Template"

[node name="TextTemplate" type="TextEdit" parent="VBoxContainer"]
margin_top = 338.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 3
text = "{}"

[connection signal="text_changed" from="VBoxContainer/TextMeta" to="." method="_on_TextMeta_text_changed"]
